WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60870
Missing migration from Editor::TextCheckingOptions to TextCheckingType in SpellingCorrectionController.cpp
https://bugs.webkit.org/show_bug.cgi?id=60870
Summary
Missing migration from Editor::TextCheckingOptions to TextCheckingType in Spe...
Jon Lee
Reported
2011-05-15 22:12:53 PDT
Related to
http://trac.webkit.org/changeset/86520
Attachments
Patch
(1.85 KB, patch)
2011-05-15 22:20 PDT
,
Jon Lee
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Lee
Comment 1
2011-05-15 22:20:14 PDT
Created
attachment 93606
[details]
Patch
mitz
Comment 2
2011-05-15 22:21:19 PDT
Comment on
attachment 93606
[details]
Patch Build fixes such as this don’t require a review.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug