Missing migration from Editor::TextCheckingOptions to TextCheckingType in SpellingCorrectionController.cpp https://bugs.webkit.org/show_bug.cgi?id=60870

Reviewed by Dan Bernstein.

* editing/SpellingCorrectionController.cpp:
(WebCore::SpellingCorrectionController::correctionPanelTimerFired): Migrating to using TextCheckingType

Canonical link: https://commits.webkit.org/76177@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86525 268f45cc-cd09-0410-ab3c-d52691b4dbfc